# k-stack

./: .mcp.json  Cargo.toml  README.md  SETUP.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: demo.sh  install.sh  pitch.sh
src/: lib.rs  main.rs
tests/: integration.rs
