[package]
name = "k-stack"
version = "0.1.0"
edition = "2021"
description = "Minimal MCP server for content-addressed storage and DAG lineage"

[[bin]]
name = "k-stack"
path = "src/main.rs"

[dependencies]
ket-cas = { path = "../../pros/ket/ket-cas" }
ket-dag = { path = "../../pros/ket/ket-dag" }
canon_d = { path = "../../pros/canon.d" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
