[workspace]

[package]
name = "k-stack"
version = "0.1.0"
edition = "2021"
description = "Minimal MCP server for content-addressed storage and DAG lineage"
license = "MIT"
repository = "https://github.com/nickjoven/k-stack"

[[bin]]
name = "k-stack"
path = "src/main.rs"

[dependencies]
ket-cas = { git = "https://github.com/nickjoven/ket.git", rev = "168c54a" }
ket-dag = { git = "https://github.com/nickjoven/ket.git", rev = "168c54a" }
canon_d = { git = "https://github.com/nickjoven/canon.d.git", rev = "b75a87d" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
